fix adjacent button spacing

--- a/components/buttons/index.css
+++ b/components/buttons/index.css
@@ -5,7 +5,6 @@
   display: inline-block;
   padding: calc(var(--vr) * .8);
   width: 100%;
-  margin-bottom: 1rem;
   transition: border-color .2s;
   border: 2px solid rgb(var(--col-brand));
   border-radius: var(--br);
@@ -36,12 +35,16 @@
     text-decoration: none;
   }
 
+  &:last-child {
+    margin-bottom: 0;
+  }
+
   & + & {
-    margin-top: calc(var(--vr) / 2);
+    margin-top: var(--vr);
 
     @media (--bp-tablet) {
       margin-top: 0;
-      margin-left: 1rem;
+      margin-left: var(--vr);
     }
   }
 
@@ -115,7 +118,7 @@
     text-align: center;
 
     & + & {
-      margin-top: calc(var(--vr) / 2);
+      margin-top: var(--vr);
       margin-left: 0;
     }
   }
